trying to fix horizontal scroll

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -166,7 +166,6 @@ h1.bannerText{
 
 .experienceItemSplit{
   flex:1;
-  border:solid;
 }
 
 .experienceMobile {
